--- a/13. Artificial Neural Network wo videos.ipynb
+++ b/13. Artificial Neural Network wo videos.ipynb
@@ -23,7 +23,11 @@
    "metadata": {},
    "source": [
     "- **수상돌기 (Dendrite)** : 인접 뉴런으로부터 신경흥분이 세포체로 입력되는 통로 (**Input**).\n",
+    "\n",
+    "\n",
     "- **축색돌기 (Axon)** : 가늘고 긴 신경섬유로 신경흥분을 전달하는 역할 (**Output**)\n",
+    "\n",
+    "\n",
     "- **세포체 (Cell body)** : 일정시간 동안 입력된 자극을 세포체 내에서 **가중되고 그 값이 임계치 이상이 되면 뉴런이 활성화** 하여 축색돌기로 자극이 전달됨.\n"
    ]
   },
@@ -45,12 +49,23 @@
    "metadata": {},
    "source": [
     "- **입력값(Inputs)**: 변수에 저장하여 수치적으로 설정\n",
+    "\n",
+    "\n",
     "- **바이어스**: 신경세포가 가지는 일종의 편견을 바이어스로 구현 (바이어스는 1, 가중치 변경으로 구현)\n",
+    "\n",
+    "\n",
     "- **가중치(Weights) (뉴런간의 연결 세기)** : 2차원 배열로 처리 ($w_{ji}$ 여기에서 $i$ = 입력 유닛번호, $j$= 출력 유닛번호)\n",
+    "\n",
+    "\n",
     "- **세포체의 기능(Sum)**: 연산자를 통해 구현\n",
+    "\n",
     "    $$\\sum_{i=1}^n w_{i} x_i + w_{0} b = w_{1} x_2 +  w_{2} x_2 + \\dots + w_{n} x_n  + w_{0}  b$$\n",
+    "    \n",
+    "    \n",
     "- **활성화(Activation)** : 활성화 함수 구현(시그모이드 함수)\n",
+    "\n",
     "$$f(x) = {1 \\over {1 + e^{-x}}}$$\n",
+    "\n",
     "<img src=\"https://upload.wikimedia.org/wikipedia/commons/8/88/Logistic-curve.svg\" width=200 height=400>\n",
     "<br>\n",
     "<img src=\"images/neuron-math.jpg\" height=400 width=400>"
@@ -95,51 +110,106 @@
     "## AND, OR, NOT 구현\n",
     "바이어스 입력($x_0 = 1$)을 포함하여 입력이 3 또는 2 개, 출력이 1개인 구조, 연결 가중치 설정이 중요\n",
     "<img src=\"https://schwalbe10.github.io/thinkage/images/posts/perceptron.png\" width=\"300\" height=\"200\">\n",
+    "\n",
     "### AND\n",
-    "<img src=\"./images/and.png\" align=left width=\"200\">\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Logistic-curve.svg/320px-Logistic-curve.svg.png\" width=200 height=400 align=\"right\">\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td> <img src=\"./images/and.png\" align=left width=\"200\"> </td>\n",
+    "        <td>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td width='20'> $X_1$ </td><td width='20'> $X_2$ </td><td> $g(-30 + 20 X_1 + 20 X_2)$ </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td> 0 </td><td> 0 </td><td> $g(-30)\\sim 0 $ </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td> 0 </td><td> 1 </td><td> $g(-10)\\sim 0 $ </td>\n",
+    "    </tr>\n",
+    "            <tr>\n",
+    "        <td> 1 </td><td> 0 </td><td> $g(-10)\\sim 0 $ </td>\n",
+    "    </tr>\n",
+    "                <tr>\n",
+    "        <td> 1 </td><td> 1 </td><td> $g(10)\\sim 1$ </td>\n",
+    "    </tr>\n",
+    "</table>\n",
+    "        </td>\n",
+    "        <td> <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Logistic-curve.svg/320px-Logistic-curve.svg.png\" width=200 height=400 align=\"right\">\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    </table>\n",
     "\n",
     "\n",
-    "$X_1$ | $X_2$ | g(-30 + 20 $X_1$ + 20 $X_2$ )\n",
-    "----- | ----- | -----------------------------\n",
-    " 0 | 0 | g(-30) $\\sim 0 $\n",
-    " 0 | 1 | g(-10) $\\sim 0 $\n",
-    " 1 | 0 | g(-10) $\\sim 0 $\n",
-    " 1 | 1 | g(10) $\\sim 1 $\n",
-    " \n",
     " <br>\n",
     " \n",
-    "### OR\n",
-    "<img src=\"./images/or.png\" align=left width=\"200\">\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Logistic-curve.svg/320px-Logistic-curve.svg.png\" width=200 height=400 align=\"right\">\n",
     "\n",
-    "$X_1$ | $X_2$ |g(-10 + 20$X_1$ + 20$X_2$)\n",
-    "----- | ----- | --------------------\n",
-    " 0 | 0 | g(-10) $\\sim 0$\n",
-    " 0 | 1 | g(10)  $\\sim 1$ \n",
-    " 1 | 0 | g(10)  $\\sim 1$ \n",
-    " 1 | 1 | g(30)  $\\sim 1$ \n",
     " \n",
+    "### OR\n",
+    "\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td> <img src=\"./images/or.png\" align=left width=\"200\"> </td>\n",
+    "        <td>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td width='20'> $X_1$ </td><td width='20'> $X_2$ </td><td> $g(-10 + 20 X_1 + 20 X_2)$ </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td> 0 </td><td> 0 </td><td> $g(-10)\\sim 0 $ </td>\n",
+    "    </tr>\n",
+    "        <tr>\n",
+    "        <td> 0 </td><td> 1 </td><td> $g(10)\\sim 1 $ </td>\n",
+    "    </tr>\n",
+    "            <tr>\n",
+    "        <td> 1 </td><td> 0 </td><td> $g(10)\\sim 1 $ </td>\n",
+    "    </tr>\n",
+    "                <tr>\n",
+    "        <td> 1 </td><td> 1 </td><td> $g(30)\\sim 1$ </td>\n",
+    "    </tr>\n",
+    "</table>\n",
+    "        </td>\n",
+    "        <td> <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Logistic-curve.svg/320px-Logistic-curve.svg.png\" width=200 height=400 align=\"right\">\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    </table>\n",
+    "\n",
     " <br>\n",
     " \n",
     "### NOT\n",
-    "<img src=\"./images/not.png\" align=left width=\"200\">\n",
-    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Logistic-curve.svg/320px-Logistic-curve.svg.png\" width=200 height=400 align=\"right\">\n",
     "\n",
-    "$X_1$ | g(10 - 20 $X_1$)\n",
-    "----- | --------------------\n",
-    " 0 | g(10) $\\sim 1$\n",
-    " 1 | g(-10) $\\sim 0$  "
+    "<table>\n",
+    "    <tr>\n",
+    "        <td> <img src=\"./images/not.png\" align=left width=\"200\"> </td>\n",
+    "        <td>\n",
+    "<table>\n",
+    "    <tr>\n",
+    "        <td width='20'> $X_1$ </td><td> $g(10 - 20 X_1)$ </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td> 0 </td><td> $g(10)\\sim 1 $ </td>\n",
+    "    </tr>\n",
+    "            <tr>\n",
+    "        <td> 1 </td><td> $g(-10)\\sim 0 $ </td>\n",
+    "    </tr>\n",
+    "</table>\n",
+    "        </td>\n",
+    "        <td> <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Logistic-curve.svg/320px-Logistic-curve.svg.png\" width=200 height=400 align=\"right\">\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    </table>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **AND, OR, NOT ** 연산은 **선형 분리 가능한 결정 경계**를 가집니다.\n",
+    "- **AND, OR, NOT** 연산은 **선형 분리 가능한 결정 경계**를 가집니다.\n",
     "    $w_0 x_0 + w_1 x_1 + w_2 x_2 = 0$ 으로 주어지는 식은 $x_1$와 $x_2$ 을 축으로 하는 평면에서의 선을 나타내는 식이기 때문.\n",
-    "- 따라서 결정 경계가 2개 필요한 **XOR**나 **XNOR** 연산 구현은 1개 층으로는 불가능 (왜냐하면, 입력층과 출력층으로 구성된 단일 층 구조의 신경망은 선형결정 경계만을 구현하기 때문입니다.)\n",
-    "</span>\n",
+    "    \n",
+    "    \n",
+    "- 따라서 결정 경계가 2개 필요한 **XOR** 나 **XNOR** 연산 구현은 1개 층으로는 불가능 (왜냐하면, 입력층과 출력층으로 구성된 단일 층 구조의 신경망은 선형결정 경계만을 구현하기 때문입니다.)\n",
+    "\n",
+    "\n",
     "<img src=\"https://pythonmachinelearning.pro/wp-content/uploads/2017/09/Logic-Gates.png.webp\" width=\"500\" height=\"150\" >"
    ]
   },
@@ -204,22 +274,39 @@
     " - 입력층 노드의 개수, \n",
     " - 출력층 노드의 개수\n",
     " - 은닉층의 개수와 그에 대한 각각의 노드의 개수\n",
+    " \n",
+    " \n",
     "- 다음단계는 노드들 간의 가중치를 결정하는 학습/훈련 단계이다.\n",
+    "\n",
+    "\n",
     "- 전체 학습 데이터에 대한 전체 오차를 최소화하는 방향으로 연결 강도(Weights)를 갱신\n",
+    "\n",
+    "\n",
     "- 입력 $x$에 대한 목표 출력이 $y$인 경우, 연결강도에 따른 전체 오차 $J(W)$는 다음과 같이 정의\n",
+    "\n",
+    "\n",
     "$$ J(W) = \\text{error between target out  } y_k^{(i)} \\text{ and computed output  } h(x^{(i)})_k$$\n",
+    "\n",
+    "\n",
     "$$ J(W) = - { 1 \\over m} \\left[ \\sum_{i=1}^{m} \\sum_{k=1}^{K} y_k^{(i)} \\log h(x^{(i)})_k + \n",
     "(1-y_k^{(i)} )  \\log (1-h(x^{(i)})_k)  \\right]$$\n",
-    "- 어떻게 오차가 최소가 되는 연결강도 $W$ 를 찾는가? ==> 경사강하법 (Gradient Descent Method)\n",
     "\n",
-    "### 경사강하법\n",
+    "\n",
+    "- 어떻게 오차가 최소가 되는 연결강도 $W$ 를 찾는가? ==> 경사하강법 (Gradient Descent Method)\n",
+    "\n",
+    "### 경사하강법\n",
     "\n",
     "\n",
     "1. 최소 오차점을 찾기 위해서는 오차함수식 $J(W)$ 를 $W$에 관하여 편미분한 결과가 기울기의 크기를 의미함으로\n",
+    "\n",
     "$$ \\min_W J(W) $$\n",
+    "\n",
+    "\n",
     "2. 그 기울기만큼 $\\Delta W$를 이전 연결 강도에서 빼주는 과정을 다음의 식과 같이 반복하면 최소점에 도달할 수 있음. 여기에서 $\\alpha$ 를 학습률이라고 부르며, 학습속도에 영향을 준다.\n",
     "$$  W_{n+1} = W_n - \\alpha {\\partial J(W) \\over \\partial W} $$\n",
-    "3. 이러한 방식으로 최적값을 찾아가는 방법을 경사 강하법(gradient descent)이라고 함.\n",
+    "\n",
+    "\n",
+    "3. 이러한 방식으로 최적값을 찾아가는 방법을 경사 하강법(gradient descent)이라고 함.\n",
     "\n",
     "<img src=\"https://cdn-images-1.medium.com/max/800/1*1eNyZxs_SthrBjvf-RQy7Q.png\" width=450>"
    ]
@@ -232,8 +319,14 @@
    "source": [
     "### 역전파(backpropagation) 알고리즘\n",
     "- 경사하강범에서의 그라디언트 ${\\partial J(W) \\over \\partial W}$ 는 역전파(backpropagation) 알고리즘으로 구한다.\n",
+    "\n",
+    "\n",
     "- 역전파 알고리즘에서 학습은 전향(forward) 단계와 후향(backward) 단계로 이루어진다. 학습에서 중요한 것은 연결 강도의 갱신인데 역전파 알고리즘은 후향 단계에서 연결 강도의 갱신이 이루어진다.\n",
+    "\n",
+    "\n",
     "- 전향 단계는 신경 회로망에 입력 패턴(x)을 제시하고, 각 노드에 대해서 입력 함수와 활성화 함수를 이용하여 출력을 산출하는 단계다. 이 때 입력 신호는 전방향, 즉 출력층 방향으로만 전달된다. 초기에 임의로 정한 연결 강도(W)로 인해 출력층에서 출력값과 목표값이 일치하지 않고 큰 오차가 발생하게 된다.\n",
+    "\n",
+    "\n",
     "- 후향단계는 역전파 알고리즘으로 그 오차로부터 그라디언트를 구하고, 이를 이용한 적절한 연결강도의 갱신을 수행한다.\n",
     "\n",
     "<img src=\"https://image.slidesharecdn.com/lect5-uwa-160515043258/95/artificial-neural-networks-lect5-multilayer-perceptron-backpropagation-13-638.jpg?cb=1463287701\" >"
@@ -266,14 +359,16 @@
     "### 역전파 (backward propabation) 알고리즘\n",
     "\n",
     "\\begin{eqnarray*}\n",
-    "\\delta^{(4)} & = & a^{(4)} - y_j \\\\ \n",
-    "\\delta^{(3)} & = & (W^{(3)})^T \\delta^{(4)} .* (a^{(3)} .* (1-a^{(3} ))\\\\ \n",
+    "\\delta^{(4)} & = & a^{(4)} - y_j \\\\ \\\\\n",
+    "\\delta^{(3)} & = & (W^{(3)})^T \\delta^{(4)} .* (a^{(3)} .* (1-a^{(3} ))\\\\ \\\\\n",
     "\\delta^{(2)} & = & (W^{(2)})^T \\delta^{(3)} .* (a^{(2)} .* (1-a^{(2} ))\\\\ \n",
     "\\end{eqnarray*}\n",
     "<br>\n",
     "<img src=\"./images/backward.png\" width=\"350\">\n",
     "<br>\n",
     "$$ {\\partial J(W) \\over \\partial w_{ij}^{(l)}  }= a_j^{(l)}\\delta_i^{(l+1)} $$\n",
+    "\n",
+    "\n",
     "$$ W_{ij}^{(l)} =  W_{ij}^{(l)} - \\alpha {\\partial J(W) \\over \\partial w_{ij}^{(l)} } $$"
    ]
   },
@@ -625,13 +720,6 @@
     "plt.yticks([])\n",
     "plt.title(np.argmax(predictions[i]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -650,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
