Update 13. Artificial Neural Network wo videos.ipynb

--- a/13. Artificial Neural Network wo videos.ipynb
+++ b/13. Artificial Neural Network wo videos.ipynb
@@ -210,7 +210,7 @@
     "- 따라서 결정 경계가 2개 필요한 **XOR** 나 **XNOR** 연산 구현은 1개 층으로는 불가능 (왜냐하면, 입력층과 출력층으로 구성된 단일 층 구조의 신경망은 선형결정 경계만을 구현하기 때문입니다.)\n",
     "\n",
     "\n",
-    "<img src=\"https://pythonmachinelearning.pro/wp-content/uploads/2017/09/Logic-Gates.png.webp\" width=\"500\" height=\"150\" >"
+    "<img src=\"https://www.researchgate.net/profile/Jarrod-Trevathan/publication/42803645/figure/fig14/AS:668269128216601@1536339184951/Linear-separability-of-Boolean-functions-the-axes-represent-the-input-values-and-the.pbm" width=\"500\" height=\"150\" >"
    ]
   },
   {
