--- a/13. Artificial Neural Network wo videos.ipynb
+++ b/13. Artificial Neural Network wo videos.ipynb
@@ -210,7 +210,7 @@
     "- 따라서 결정 경계가 2개 필요한 **XOR** 나 **XNOR** 연산 구현은 1개 층으로는 불가능 (왜냐하면, 입력층과 출력층으로 구성된 단일 층 구조의 신경망은 선형결정 경계만을 구현하기 때문입니다.)\n",
     "\n",
     "\n",
-    "<img src=\"https://miro.medium.com/max/720/1*CyGlr8VjwtQGeNsuTUq3HA.webp\" width=\"500\" height=\"150\" >"
+    "<img src=\"https://blog.kakaocdn.net/dn/zydvd/btqGX5Tliz7/9MHDi16DwTkKS4MBzjxfu0/img.gif\" width=\"500\" height=\"150\" >"
    ]
   },
   {
