Update 13. Artificial Neural Network wo videos.ipynb

--- a/13. Artificial Neural Network wo videos.ipynb
+++ b/13. Artificial Neural Network wo videos.ipynb
@@ -37,7 +37,7 @@
     "collapsed": true
    },
    "source": [
-    "## 논리유닛 (Logistic Unit)\n",
+    "## 로지스틱 유닛 (Logistic Unit)\n",
     "생물학젹 신경세포를 모델링한 뉴런이라는 매우 단순한 기능을 하는 유닛 (각 유닛과 가중치 모두 변수화).\n",
     "유닛을 상호 연결하여 네트워크를 구성할 경우 간단한 논리 연산이 가능\n",
     "\n",
